Fix 757 selected state in high contrast mode

--- a/Minimal.css
+++ b/Minimal.css
@@ -477,6 +477,7 @@ body .excalidraw {
   --nav-item-color: var(--tx2);
   --nav-item-color-active: var(--tx1);
   --nav-item-color-hover: var(--tx1);
+  --nav-item-color-selected: var(--tx1);
   --nav-collapse-icon-color: var(--tx2);
   --nav-collapse-icon-color-collapsed: var(--tx2);
   --nav-indentation-guide-color: var(--ui1);
