--- a/src/scss/variables/theme.scss
+++ b/src/scss/variables/theme.scss
@@ -59,6 +59,7 @@
 	--nav-item-color:                    var(--tx2);
 	--nav-item-color-active:             var(--tx1);
 	--nav-item-color-hover:              var(--tx1);
+	--nav-item-color-selected:           var(--tx1);
 
 	--nav-collapse-icon-color:           var(--tx2);
 	--nav-collapse-icon-color-collapsed: var(--tx2);
